<resources>
    <string name="app_name">WelbNews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_in_detail">Read in detail</string>
    <string name="newsimag">newsImag</string>
    <string name="published_date">\"published at: \"</string>
    <string name="news_image">News Image</string>
    <string name="title">title</string>
    <string name="author">Author</string>
    <string name="no_news_internet_access">No News/Internet Access</string>
</resources>
