<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="27dp"
    android:orientation="vertical">


    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/tittle1"
        android:hint="@string/title"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/author"
        android:hint="@string/author"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/date"
        android:hint="@string/published_date"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:layout_marginTop="5dp"
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/news_image" />

    <Button
        android:layout_marginTop="5dp"
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_in_detail"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>